--- a/spellsource-web/package.json
+++ b/spellsource-web/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "postinstall": "patch-package",
+    "postinstall": "yarn run patch-package",
     "develop": "next dev",
     "dev": "next dev",
     "build": "next build",
@@ -43,7 +43,6 @@
     "next-auth": "^4.20.1",
     "nextjs-cors": "^2.1.2",
     "node-fs-extra": "^0.8.2",
-    "patch-package": "^6.5.1",
     "pify": "^5.0.0",
     "pixelmatch": "^5.2.1",
     "postgraphile": "^4.13.0",
@@ -89,7 +88,7 @@
     "@graphql-codegen/typescript-resolvers": "^3.1.1",
     "@tomysmith/deep-partial": "^1.0.1",
     "@types/elasticlunr": "^0.9.5",
-    "@types/java": "^0.9.2",
+    "@types/java": "~0.9.2",
     "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.15.3",
@@ -98,9 +97,10 @@
     "@types/react-dom": "^18.0.11",
     "flow-bin": "^0.150.1",
     "identity-obj-proxy": "^3.0.0",
-    "java": "^0.13.0",
+    "java": "~0.13.0",
     "jest": "^29.1.0",
     "jest-environment-jsdom": "^29.1.0",
+    "patch-package": "^6.5.1",
     "prettier": "^2.8.4",
     "react-test-renderer": "^17.0.2",
     "standard": "^16.0.3",
