--- a/settings.gradle
+++ b/settings.gradle
@@ -1,22 +1,19 @@
+pluginManagement {
+  repositories {
+    mavenCentral()
+    gradlePluginPortal()
+  }
+}
+
 plugins {
-    id("org.gradle.toolchains.foojay-resolver") version "0.5.0"
+  id('org.gradle.toolchains.foojay-resolver-convention') version '0.6.0'
 }
 
 buildCache {
-    local {
-        directory = new File(rootDir, '.gradle/build-cache')
-        removeUnusedEntriesAfterDays = 30
-    }
-}
-
-toolchainManagement {
-    jvm {
-        javaRepositories {
-            repository("foojay") {
-                resolverClass = org.gradle.toolchains.foojay.FoojayToolchainResolver
-            }
-        }
-    }
+  local {
+    directory = new File(rootDir, '.gradle/build-cache')
+    removeUnusedEntriesAfterDays = 30
+  }
 }
 
 include 'spellsource-game'
