--- a/spellsource-web/build.gradle
+++ b/spellsource-web/build.gradle
@@ -2,7 +2,7 @@ import groovy.json.JsonSlurper
 import org.apache.tools.ant.taskdefs.condition.Os
 
 plugins {
-  id "com.github.node-gradle.node" version "5.0.0"
+  id "com.github.node-gradle.node"
   id "base"
 }
 
