--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,4 @@ framework/src/csharp/HiddenSwitch/Framework/Plugins/Grpc.Core/runtimes/ios/libgr
 spellsource-protos/src/csharp/HiddenSwitch/Framework/Plugins/Grpc.Core/runtimes/**/*.dylib filter=lfs diff=lfs merge=lfs -text
 spellsource-protos/src/csharp/HiddenSwitch/Framework/Plugins/Grpc.Core/runtimes/ios/libgrpc.a filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
+*.safetensors filter=lfs diff=lfs merge=lfs -text
